# ps3eye

./: .gitignore  README.md  data.txt  init.bash
catkin_ws/src/camera_umd/uvc_camera/: CMakeLists.txt  package.xml
catkin_ws/src/camera_umd/uvc_camera/src/: uvc_cam.cpp
catkin_ws/src/camera_umd/uvc_stereo/: package.xml
catkin_ws/src/my_stereo_cam/: CMakeLists.txt  package.xml
catkin_ws/src/my_stereo_cam/calib/large_in1/: left.yaml  ost.txt
catkin_ws/src/my_stereo_cam/calib/large_in2/: left.yaml  right.yaml
catkin_ws/src/my_stereo_cam/calib/large_out1/: left.yaml  ost.txt
catkin_ws/src/my_stereo_cam/calib/large_out2/: right.yaml
catkin_ws/src/my_stereo_cam/calib/small_in/: right.yaml
catkin_ws/src/my_stereo_cam/launch/: basicLaunch.launch
catkin_ws/src/stereo_extractor/: CMakeLists.txt  package.xml
catkin_ws/src/stereo_extractor/include/stereo_extractor/: concurrent_queue.h  stereo_exporter.h  stereo_extractor.h  stereo_file_exporter.h  stereo_snapshot.h
catkin_ws/src/stereo_extractor/launch/: ExtractNative.launch
catkin_ws/src/stereo_extractor/src/: extract.cpp  stereo_extractor.cpp  stereo_extractor_node.cpp  stereo_file_exporter.cpp
rosbuild_ws/ipc-bridge/ipc_bridge_stack/: stack.xml
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/: CMakeLists.txt  manifest.xml
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/.svn/: all-wcprops  entries
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/include/.svn/: all-wcprops  entries
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/ipc-3.8.6/java/: ipcjava.c
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/ipc-3.8.6/src/: comModule.c  globalMUtil.c  ipcPriv.h  multiThread.c
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/ipc-3.8.6/test/: GNUmakefile  multiTest.c
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc/ipc-3.8.6/xdrgen/: XDRParser.cc
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc_bridge/: generate_msgs.sh  ipc_bridge.mk  manifest.xml
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc_bridge/include/ipc_bridge/: ipc_bridge.h
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc_bridge_example/: CMakeLists.txt  example_publisher.m  example_subscriber.m  manifest.xml  matlab_publisher_example.launch  matlab_subscriber_example.launch
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc_bridge_matlab/: ipc_bridge_matlab.mk  manifest.xml
rosbuild_ws/ipc-bridge/ipc_bridge_stack/ipc_bridge_ros/: ipc_bridge_ros.mk  manifest.xml
rosbuild_ws/ipc-bridge/ipc_msgs/: stack.xml
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_geometry_msgs/include/ipc_bridge/msgs/: geometry_msgs_Point.h  geometry_msgs_Point32.h  geometry_msgs_PointStamped.h  geometry_msgs_Pose.h  geometry_msgs_PoseArray.h  geometry_msgs_PoseStamped.h  geometry_msgs_PoseWithCovariance.h  geometry_msgs_PoseWithCovarianceStamped.h  geometry_msgs_Quaternion.h  geometry_msgs_Transform.h  geometry_msgs_TransformStamped.h  geometry_msgs_Twist.h  geometry_msgs_TwistStamped.h  geometry_msgs_TwistWithCovariance.h  geometry_msgs_Vector3.h  geometry_msgs_Wrench.h
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_nav_msgs/include/ipc_bridge/msgs/: nav_msgs_GridCells.h  nav_msgs_MapMetaData.h  nav_msgs_OccupancyGrid.h  nav_msgs_Odometry.h  nav_msgs_Path.h
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_roslib/include/ipc_bridge/msgs/: roslib_Header.h
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_sensor_msgs/include/: sensor_msgs_Image.h
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_sensor_msgs/include/ipc_bridge/msgs/: sensor_msgs_ChannelFloat32.h  sensor_msgs_Image.h  sensor_msgs_Imu.h  sensor_msgs_LaserScan.h  sensor_msgs_PointCloud.h
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_sensor_msgs/ros/: sensor_msgs_Image_publisher.cc
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_sensor_msgs/xdr/: sensor_msgs_Image.xdr
rosbuild_ws/ipc-bridge/ipc_msgs/ipc_std_msgs/include/ipc_bridge/msgs/: std_msgs_Bool.h
src/camera_umd/camera_umd/: package.xml
src/camera_umd/jpeg_streamer/: CMakeLists.txt  package.xml
src/camera_umd/uvc_stereo/: CMakeLists.txt
src/my_stereo_cam/: CMakeLists.txt
src/my_stereo_cam/calib/large_in1/: right.yaml
src/my_stereo_cam/calib/large_in2/: left.yaml  ost.txt  right.yaml
src/my_stereo_cam/calib/large_out1/: right.yaml
src/my_stereo_cam/calib/large_out2/: left.yaml  ost.txt
src/my_stereo_cam/calib/small_in/: left.yaml  ost.txt
src/my_stereo_cam/launch/: basicLaunch.launch  stereoLaunch.launch
