<package>
  <name>uvc_camera</name>
  <version>0.1.5</version>
  <description>

     A collection of node(let)s that stream images from USB cameras (UVC)
     and provide CameraInfo messages to consumers. Includes a
     two-camera node that provides rough synchronization
     for stereo vision.

     Currently uses the base driver from Morgan Quigley's uvc_cam package.

  </description>
  <maintainer email="ktossell@umd.edu">Ken Tossell</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/uvc_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend> 
  <build_depend>camera_info_manager</build_depend> 
  <build_depend>image_transport</build_depend> 
  <build_depend>nodelet</build_depend> 
  
  <run_depend>sensor_msgs</run_depend> 
  <run_depend>camera_info_manager</run_depend> 
  <run_depend>image_transport</run_depend> 
  <run_depend>nodelet</run_depend> 
  
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>camera_info_manager</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

   <!--<depend package="dynamic_reconfigure" /> -->

  <export>
    <nodelet plugin="${prefix}/nodelet_uvc_camera.xml"/>
  </export>
</package>


