<package>
  <name>uvc_stereo</name>
  <version>0.1.5</version>
  <description>

    Deprecated. Please use stereo_node or StereoNodelet in
    package uvc_camera.

  </description>
  <maintainer email="ktossell@umd.edu">Ken Tossell</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/uvc_stereo</url>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>camera_info_manager</build_depend> 
  <build_depend>image_transport</build_depend> 

  <run_depend>sensor_msgs</run_depend> 
  <run_depend>camera_info_manager</run_depend> 
  <run_depend>image_transport</run_depend> 
   
   <!-- <test_depend>sensor_msgs</test_depend> -->
   <!-- <test_depend>camera_info_manager</test_depend> -->
   <!-- <test_depend>image_transport</test_depend> -->

  <export>

  </export>
</package>


